--- a/web/main.html
+++ b/web/main.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Квадратный корень</title>
+    <link rel="stylesheet" href="css/style.css">
     <script src="el.js"></script>
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
 </head>
 <body>
-    <h1>Привет</h1>
+    <h1 align="center">Данная программа считает квадратный корень</h1>
 </body>
 </html>
